<resources>
    <string name="app_name">BYOB</string>
    <string name="google_maps_API_Key">AIzaSyCQrSyMaHTnjXcTdjK69PHSkxniKHsbIto</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="title_offer">Offer</string>
    <string name="title_account">Account</string>
    <string name="title_search">Search</string>
    <string name="title_matches">Matches</string>
    <string name="title_shortlist">Shortlists</string>
    <string name="title_offer_screen">POST AN OFFER</string>
    <string name="title_activity_maps">Map</string>
    <string name="searchDialogHint">Enter destination address, City or Zip Code</string>
    <string name="source_search_dialog_hint">Enter source address, City or Zip Code</string>
    <string name="enter_place_here">Enter Place Here</string>
    <string name="destination_address">Destination Address</string>
    <string name="your_address">Your Address</string>
    <string name="your_property_type">Your Property Type</string>
    <string name="next">Next</string>
    <string name="description_property_icon">Property Icon</string>
    <string name="offer_screen_title">OFFER PROPERTY</string>
    <string name="matches_intent_key">matches</string>
    <string name="userTableName">users</string>
    <string name="signUpButtonText">Sign Up</string>
    <string name="signInButtonText">Sign In</string>
    <string name="logicRegisterPageNextButtonText">GO</string>
    <string name="title_activity_more_menu">MoreMenu</string>
    <string name="nav_header_title">BYOB</string>
    <string name="nav_header_subtitle">BYOB@byob.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search_screen_title">Search Property</string>
    <string name="myMatchesScreenTitle">Possible Matches</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
