<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_page_background"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="186dp"
        android:layout_marginRight="50dp"
        android:hint="Username"
        android:inputType="textEmailAddress"
        android:singleLine="true" />


    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_input"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:singleLine="true" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:onClick="loginOrRegisterUser"
        android:text="@string/logicRegisterPageNextButtonText"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/userTypeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/userLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/userTypeSwitch"
        android:layout_alignBottom="@+id/userTypeSwitch"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_toStartOf="@+id/userTypeSwitch"
        android:layout_toLeftOf="@+id/userTypeSwitch"
        android:text="@string/signInButtonText"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/userRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/userTypeSwitch"
        android:layout_alignBottom="@+id/userTypeSwitch"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_toEndOf="@+id/userTypeSwitch"
        android:layout_toRightOf="@+id/userTypeSwitch"
        android:text="@string/signUpButtonText"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

</RelativeLayout>