<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OfferPropertyActivity">

    <include
        android:id="@+id/drawer_layout"
        layout="@layout/element_drawer_navigation"
        android:layout_width="match_parent"
        android:layout_alignTop="@+id/offer_property_title"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/offer_property_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="20dp"
        android:background="@drawable/black_border"
        android:gravity="center"
        android:text="@string/offer_screen_title"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/offer_property_title"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:elevation="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@null"
                    android:text="@string/destination_address"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_layout_src_loc_search"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/white_boarder"
                android:elevation="10dp">

                <ImageView
                    android:id="@+id/src_addr_search_icon"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_search_black_24dp" />

                <EditText
                    android:id="@+id/src_input_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/src_addr_search_icon"
                    android:background="@null"
                    android:focusable="false"
                    android:hint="@string/source_search_dialog_hint"
                    android:onClick="onSearchCalled"
                    android:singleLine="true"
                    android:textColor="#000"
                    android:textSize="15sp" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/your_address_heading"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:elevation="10dp">

                <TextView
                    android:id="@+id/your_address_title"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@null"
                    android:text="@string/your_address"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:onClick="swapAddressValues"
                    android:src="@drawable/ic_swap_vert_black_24dp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_layout_dest_loc_search"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/white_boarder"
                android:elevation="10dp">

                <ImageView
                    android:id="@+id/dest_addr_search_icon"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_search_black_24dp" />


                <EditText
                    android:id="@+id/dest_input_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/dest_addr_search_icon"
                    android:background="@null"
                    android:focusable="false"
                    android:hint="@string/searchDialogHint"
                    android:onClick="onSearchCalled"
                    android:singleLine="true"
                    android:textColor="#000"
                    android:textSize="15sp" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:background="@null"
                android:text="@string/your_property_type"
                android:textSize="18sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:background="@drawable/white_boarder"
                android:elevation="10dp"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/apartment_icon"
                        android:layout_width="100dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/description_property_icon"
                        android:onClick="update_property_icon"
                        android:padding="0dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/apartment_black_and_white" />

                    <ImageButton
                        android:id="@+id/house_villa_icon"
                        android:layout_width="100dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/description_property_icon"
                        android:onClick="update_property_icon"
                        android:padding="0dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/house_villa_black_and_white" />

                    <ImageButton
                        android:id="@+id/studio_apartment_icon"
                        android:layout_width="100dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/description_property_icon"
                        android:onClick="update_property_icon"
                        android:padding="0dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/studio_apartment_black_and_white" />

                    <ImageButton
                        android:id="@+id/farm_house_icon"
                        android:layout_width="100dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/description_property_icon"
                        android:onClick="update_property_icon"
                        android:padding="0dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/farm_house_black_and_white" />

                    <ImageButton
                        android:id="@+id/serviced_apartment_icon"
                        android:layout_width="100dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/description_property_icon"
                        android:onClick="update_property_icon"
                        android:padding="0dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/serviced_apartment_black_and_white" />
                </LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/transparent_border"
            android:onClick="offer_property_next_1"
            android:text="@string/next" />

    </LinearLayout>

    <include
        android:id="@+id/navigation"
        layout="@layout/element_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>